[metadata]
name = PMVHaven
; Version format explained:
;   Year.Month.Day.UpdateNumber
;   - Year: The full year of the release
;   - Month: The two-digit month of the release
;   - Day: The two-digit day of the release
;   - UpdateNumber: Sequential number of updates on that day, starting with 001
; Example: 2024.05.05.001 represents the first update on May 5, 2024.
version = 2024.07.03.001


[options]
packages = find_namespace:

[flake8]
exclude = build,venv,.tox,.git,.pytest_cache
ignore = E402,E501,E731,E741,W503
max_line_length = 120
